--- a/proyecto/proyecto.html
+++ b/proyecto/proyecto.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Vincula el archivo de estilos CSS externo -->
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>CRUD Básico con Python y SQLite</title>
 </head>
 <body>
 
-    
+    <!-- Imagen banner superior decorativa -->
     <img src="https://i.postimg.cc/mD38v764/Chat-GPT-Image-26-may-2025-22-28-33.png" alt="Banner de inicio" style="width: 100%; border-radius: 15px; margin-bottom: 20px;">
 
     <h1>Base de datos</h1>
 
-    <!-- Formulario -->
+    <!-- Formulario para ingresar nuevos productos o editar -->
     <div id="form-container">
         <div class="form-group">
             <label>Nombre</label>
@@ -26,11 +27,13 @@
             <label>Contacto</label>
             <textarea id="descripcion"></textarea>
         </div>
+        <!-- Botón que llama a la función guardarProducto() -->
         <button onclick="guardarProducto()">Guardar</button>
+        <!-- Espacio para mostrar mensajes de confirmación -->
         <div id="message"></div>
     </div>
 
-    <!-- Tabla de datos -->
+    <!-- Tabla que muestra los productos almacenados -->
     <h2>Listado de usuario</h2>
     <table id="tabla-productos">
         <thead>
@@ -38,22 +41,26 @@
                 <th>ID</th><th>Nombre</th><th>Apellido</th><th>Contacto</th><th>Descripción</th>
             </tr>
         </thead>
-        <tbody></tbody>
+        <tbody></tbody> <!-- Cuerpo de tabla que será llenado dinámicamente -->
     </table>
 
-    
+    <!-- Imagen banner inferior decorativa -->
     <img src="https://i.postimg.cc/g0Hhd4dg/Chat-GPT-Image-26-may-2025-22-36-42.png" alt="Banner de cierre" style="width: 100%; border-radius: 15px; margin-top: 20px;">
 
+    <!-- Script con lógica para el manejo del CRUD -->
     <script>
+        // Carga los productos al cargar la página
         document.addEventListener('DOMContentLoaded', cargarProductos);
 
+        // Función para obtener y mostrar los productos desde el servidor
         function cargarProductos() {
             fetch('/productos')
                 .then(response => response.json())
                 .then(data => {
                     const tbody = document.querySelector('#tabla-productos tbody');
-                    tbody.innerHTML = '';
+                    tbody.innerHTML = ''; // Limpia la tabla antes de llenarla
                     data.forEach(producto => {
+                        // Agrega una fila por producto
                         tbody.innerHTML += `
                             <tr>
                                 <td>${producto.id}</td>
@@ -70,6 +77,7 @@
                 });
         }
 
+        // Función para guardar un nuevo producto o editar uno existente
         function guardarProducto() {
             const producto = {
                 nombre: document.getElementById('nombre').value,
@@ -77,6 +85,7 @@
                 descripcion: document.getElementById('descripcion').value
             };
 
+            // Envía el producto como POST al servidor
             fetch('/productos', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
@@ -85,11 +94,12 @@
             .then(response => response.json())
             .then(data => {
                 document.getElementById('message').textContent = data.mensaje;
-                cargarProductos();
-                limpiarFormulario();
+                cargarProductos(); // Recarga la tabla
+                limpiarFormulario(); // Limpia el formulario
             });
         }
 
+        // Función para eliminar un producto existente
         function eliminarProducto(id) {
             if (confirm('¿Eliminar este producto?')) {
                 fetch(`/productos/${id}`, { method: 'DELETE' })
@@ -101,6 +111,7 @@
             }
         }
 
+        // Función para cargar los datos de un producto en el formulario para edición
         function editarProducto(id) {
             fetch(`/productos/${id}`)
                 .then(response => response.json())
@@ -108,10 +119,11 @@
                     document.getElementById('nombre').value = producto.nombre;
                     document.getElementById('precio').value = producto.precio;
                     document.getElementById('descripcion').value = producto.descripcion;
-                    window.scrollTo(0, 0);
+                    window.scrollTo(0, 0); // Sube al formulario
                 });
         }
 
+        // Función para limpiar los campos del formulario
         function limpiarFormulario() {
             document.getElementById('nombre').value = '';
             document.getElementById('precio').value = '';
@@ -120,3 +132,4 @@
     </script>
 </body>
 </html>
+
